Start reducing the content. Remove logo

--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@ layout: default
   <section class="main-section">
     <h1>City services</h1>
       <ul>
+        <!-- generate popular links -->
         <li class="feature popular">
           <h2>Popular this week</h2>
           <ul>
-            <li><a href="/transport/parking/pay-parking-ticket/">Pay a parking ticket</a></li>
-            <li><a href="/transport/parking/request-refund">Request a refund for overpayment</a></li>
-            <li><a href="">Pay a parking ticket</a></li>
-            <li><a href="">Pay a parking ticket</a></li>
-            <li><a href="">Pay a parking ticket</a></li>
-            <li><a href="">Pay a parking ticket</a></li>
+            <li><a href="">Link</a></li>
           </ul>
         </li>
+        <!-- generate topic links -->
         <li><h2><a href="">Government</a></h2>
           <p>City <a href="">Departments</a> and <a href="">council members</a> &amp; <a href="">meetings</a> and <a href="">history</a></p>
           <p class="view-more"><a href="">Browse Government</a></p>
@@ -60,6 +57,7 @@ layout: default
   </section>
 
   <section class="main-section">
+    <!-- generate news links -->
     <h1>Community news</h1>
     <ul>
       <li><h2><a href="">City of Oakland Issues RFP for Sale of Key Parcel in the Thriving Uptown District</a></h2>
@@ -75,6 +73,7 @@ layout: default
   </section>
   
   <section class="main-section">
+    <!-- generate department links -->
     <h1>City departments</h1>
     <ul>
       <li><h2><a href="">Office of the Mayor</a></h2></li>
