Added departments to config.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home">
 
   <div class="search-main">
-    <label>Welcome to City Website. <br />How can we help you?</label>
+    <label>Welcome to {{site.title}}. <br />How can we help you?</label>
     <input type="search" placeholder="Pay parking ticket" /><input type="submit" value="Search" />
   </div>
 
