--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ layout: default
     <!-- generate department links -->
     <h1>City departments</h1>
     <ul>
-      {% for department_hash in site.departments %}
+      {% for department_hash in site.data.departments %}
         {% for department in department_hash %}
           <li><a href="/{{ department[0] }}">{{ department[1] }}</a></li>
         {% endfor %}
