Created a new page to pull out the pattern lib onto + stub layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
         <li class="feature popular">
           <h2>Popular this week</h2>
           <ul>
-            <li><a href="">Link</a></li>
+            <li><a href="/patterns">Patterns</a></li>
           </ul>
         </li>
         <!-- generate topic links -->
